playing with traversal

--- a/mslemon/static/css/adminscreen.css
+++ b/mslemon/static/css/adminscreen.css
@@ -7951,6 +7951,7 @@ li.top-bar-button {
 .action-button {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
+  color: #d7c6c4;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -7969,16 +7970,15 @@ li.top-bar-button {
   -moz-box-shadow: #9a6d69 0 1px 0 inset;
   box-shadow: #9a6d69 0 1px 0 inset;
   border: 1px solid #3f2c2b;
-  color: #d7c6c4;
   text-shadow: #1d1514 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:hover {
   background-color: #3f2c2b;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5d423f), color-stop(100%, #3f2c2b));
@@ -7987,13 +7987,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5d423f, #3f2c2b);
   background: linear-gradient(#5d423f, #3f2c2b);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:active {
   -webkit-box-shadow: #362624 0 1px 2px inset;
   -moz-box-shadow: #362624 0 1px 2px inset;
   box-shadow: #362624 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button.disabled, .action-button[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8003,7 +8003,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
+/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
 .action-button::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8184,6 +8184,7 @@ li.top-bar-button {
 .imagelist-delete-image {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
+  color: #d7c6c4;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8202,16 +8203,15 @@ li.top-bar-button {
   -moz-box-shadow: #9a6d69 0 1px 0 inset;
   box-shadow: #9a6d69 0 1px 0 inset;
   border: 1px solid #3f2c2b;
-  color: #d7c6c4;
   text-shadow: #1d1514 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .imagelist-delete-image:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .imagelist-delete-image:hover {
   background-color: #3f2c2b;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5d423f), color-stop(100%, #3f2c2b));
@@ -8220,13 +8220,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5d423f, #3f2c2b);
   background: linear-gradient(#5d423f, #3f2c2b);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .imagelist-delete-image:active {
   -webkit-box-shadow: #362624 0 1px 2px inset;
   -moz-box-shadow: #362624 0 1px 2px inset;
   box-shadow: #362624 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .imagelist-delete-image.disabled, .imagelist-delete-image[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8236,7 +8236,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
+/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
 .imagelist-delete-image::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8251,6 +8251,7 @@ li.top-bar-button {
 .delete-image-button {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
+  color: #d7c6c4;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8269,16 +8270,15 @@ li.top-bar-button {
   -moz-box-shadow: #9a6d69 0 1px 0 inset;
   box-shadow: #9a6d69 0 1px 0 inset;
   border: 1px solid #3f2c2b;
-  color: #d7c6c4;
   text-shadow: #1d1514 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-image-button:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-image-button:hover {
   background-color: #3f2c2b;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5d423f), color-stop(100%, #3f2c2b));
@@ -8287,13 +8287,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5d423f, #3f2c2b);
   background: linear-gradient(#5d423f, #3f2c2b);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-image-button:active {
   -webkit-box-shadow: #362624 0 1px 2px inset;
   -moz-box-shadow: #362624 0 1px 2px inset;
   box-shadow: #362624 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-image-button.disabled, .delete-image-button[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8303,7 +8303,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
+/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
 .delete-image-button::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8347,6 +8347,7 @@ li.top-bar-button {
 .userlist-delete-user {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
+  color: #d7c6c4;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8365,16 +8366,15 @@ li.top-bar-button {
   -moz-box-shadow: #9a6d69 0 1px 0 inset;
   box-shadow: #9a6d69 0 1px 0 inset;
   border: 1px solid #3f2c2b;
-  color: #d7c6c4;
   text-shadow: #1d1514 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .userlist-delete-user:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .userlist-delete-user:hover {
   background-color: #3f2c2b;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5d423f), color-stop(100%, #3f2c2b));
@@ -8383,13 +8383,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5d423f, #3f2c2b);
   background: linear-gradient(#5d423f, #3f2c2b);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .userlist-delete-user:active {
   -webkit-box-shadow: #362624 0 1px 2px inset;
   -moz-box-shadow: #362624 0 1px 2px inset;
   box-shadow: #362624 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .userlist-delete-user.disabled, .userlist-delete-user[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8399,7 +8399,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
+/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
 .userlist-delete-user::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8414,6 +8414,7 @@ li.top-bar-button {
 .delete-user-button {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
+  color: #d7c6c4;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8432,16 +8433,15 @@ li.top-bar-button {
   -moz-box-shadow: #9a6d69 0 1px 0 inset;
   box-shadow: #9a6d69 0 1px 0 inset;
   border: 1px solid #3f2c2b;
-  color: #d7c6c4;
   text-shadow: #1d1514 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-user-button:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-user-button:hover {
   background-color: #3f2c2b;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5d423f), color-stop(100%, #3f2c2b));
@@ -8450,13 +8450,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5d423f, #3f2c2b);
   background: linear-gradient(#5d423f, #3f2c2b);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-user-button:active {
   -webkit-box-shadow: #362624 0 1px 2px inset;
   -moz-box-shadow: #362624 0 1px 2px inset;
   box-shadow: #362624 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-user-button.disabled, .delete-user-button[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8466,7 +8466,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
+/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
 .delete-user-button::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8510,6 +8510,7 @@ li.top-bar-button {
 .grouplist-delete-group {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
+  color: #d7c6c4;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8528,16 +8529,15 @@ li.top-bar-button {
   -moz-box-shadow: #9a6d69 0 1px 0 inset;
   box-shadow: #9a6d69 0 1px 0 inset;
   border: 1px solid #3f2c2b;
-  color: #d7c6c4;
   text-shadow: #1d1514 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .grouplist-delete-group:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .grouplist-delete-group:hover {
   background-color: #3f2c2b;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5d423f), color-stop(100%, #3f2c2b));
@@ -8546,13 +8546,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5d423f, #3f2c2b);
   background: linear-gradient(#5d423f, #3f2c2b);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .grouplist-delete-group:active {
   -webkit-box-shadow: #362624 0 1px 2px inset;
   -moz-box-shadow: #362624 0 1px 2px inset;
   box-shadow: #362624 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .grouplist-delete-group.disabled, .grouplist-delete-group[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8562,7 +8562,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
+/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
 .grouplist-delete-group::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8577,6 +8577,7 @@ li.top-bar-button {
 .delete-group-button {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
+  color: #d7c6c4;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8595,16 +8596,15 @@ li.top-bar-button {
   -moz-box-shadow: #9a6d69 0 1px 0 inset;
   box-shadow: #9a6d69 0 1px 0 inset;
   border: 1px solid #3f2c2b;
-  color: #d7c6c4;
   text-shadow: #1d1514 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-group-button:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-group-button:hover {
   background-color: #3f2c2b;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5d423f), color-stop(100%, #3f2c2b));
@@ -8613,13 +8613,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5d423f, #3f2c2b);
   background: linear-gradient(#5d423f, #3f2c2b);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-group-button:active {
   -webkit-box-shadow: #362624 0 1px 2px inset;
   -moz-box-shadow: #362624 0 1px 2px inset;
   box-shadow: #362624 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .delete-group-button.disabled, .delete-group-button[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8629,7 +8629,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
+/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
 .delete-group-button::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
