--- a/sass/mainscreen.scss
+++ b/sass/mainscreen.scss
@@ -3,7 +3,8 @@
 
 // colors
 //@import "partials/basecolors/darkseagreen";
-@import "partials/basecolors/white-smoke";
+//@import "partials/basecolors/white-smoke";
+@import "partials/basecolors/wheat4";
 
 
 /* import all colors and variables before bootstrap */
