--- a/mslemon/static/css/adminscreen.css
+++ b/mslemon/static/css/adminscreen.css
@@ -7870,6 +7870,12 @@ li.top-bar-button {
 }
 
 /* line 147, ../../../sass/partials/_baselayout.scss */
+.content {
+  background: #4874ad;
+  margin-bottom: 5em;
+}
+
+/* line 152, ../../../sass/partials/_baselayout.scss */
 .two-col {
   width: 100%;
   float: left;
@@ -7877,13 +7883,21 @@ li.top-bar-button {
   display: inline;
 }
 
-/* line 151, ../../../sass/partials/_baselayout.scss */
-.content {
+/* line 156, ../../../sass/partials/_baselayout.scss */
+.right-column-content {
+  width: 74.5762711864%;
+  float: left;
+  margin-right: 1.6949152542%;
+  display: inline;
+  float: right;
+  margin-right: 0;
+  *margin-left: -1em;
+  display: inline;
   background: #4874ad;
   margin-bottom: 5em;
 }
 
-/* line 158, ../../../sass/partials/_baselayout.scss */
+/* line 163, ../../../sass/partials/_baselayout.scss */
 .sidebar {
   /*@include background-size('cover');*/
   width: 23.7288135593%;
@@ -7902,33 +7916,33 @@ li.top-bar-button {
   -webkit-border-bottom-right-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
 }
-/* line 160, ../../../sass/partials/_baselayout.scss */
+/* line 165, ../../../sass/partials/_baselayout.scss */
 .sidebar a {
   color: #212121;
 }
-/* line 171, ../../../sass/partials/_baselayout.scss */
+/* line 176, ../../../sass/partials/_baselayout.scss */
 .sidebar a:hover {
   background: #688ec0;
   border-radius: 0.5em;
   -moz-border-radius: 0.5em;
 }
-/* line 176, ../../../sass/partials/_baselayout.scss */
+/* line 181, ../../../sass/partials/_baselayout.scss */
 .sidebar .left-menu-header {
   font-family: "Rambla";
   font-size: 1.5em;
   background: #395c89;
   color: lightsteelblue;
 }
-/* line 182, ../../../sass/partials/_baselayout.scss */
+/* line 187, ../../../sass/partials/_baselayout.scss */
 .sidebar .left-menu {
   margin-left: 0.5em;
 }
-/* line 185, ../../../sass/partials/_baselayout.scss */
+/* line 190, ../../../sass/partials/_baselayout.scss */
 .sidebar #sidebar-logout {
   margin-left: 0.5em;
 }
 
-/* line 190, ../../../sass/partials/_baselayout.scss */
+/* line 195, ../../../sass/partials/_baselayout.scss */
 .footer {
   width: 100%;
   float: left;
