--- a/sass/adminscreen.scss
+++ b/sass/adminscreen.scss
@@ -40,3 +40,9 @@
 //@import "partials/hubby";
 
 //@import "partials/tickets";
+
+#main-alert {
+	background-color: $basecolor4;
+	color: $basecolor;
+}
+
