--- a/mslemon/static/css/adminscreen.css
+++ b/mslemon/static/css/adminscreen.css
@@ -7827,7 +7827,7 @@ li.top-bar-button {
 /* line 107, ../../../sass/partials/_baselayout.scss */
 .main-content {
   margin-top: 4em;
-  margin-bottom: 40em;
+  margin-bottom: 4em;
 }
 
 /* line 112, ../../../sass/partials/_baselayout.scss */
@@ -8647,4 +8647,10 @@ li.top-bar-button {
 .delete-group-button::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
+}
+
+/* line 44, ../../../sass/adminscreen.scss */
+#main-alert {
+  background-color: #395c89;
+  color: lightsteelblue;
 }
